--- a/project.yml
+++ b/project.yml
@@ -1,25 +1,29 @@
 name: ExampleApp
+
 settings:
   base:
     MARKETING_VERSION: 1.0.0
     CURRENT_PROJECT_VERSION: 1
     PRODUCT_NAME: ExampleApp
+
 options:
   developmentLanguage: ja
   bundleIdPrefix: org.app.example.u7chan
   deploymentTarget:
     iOS: '15.0'
+
 targets:
   ExampleApp:
     type: application
     platform: iOS
     settings:
       SWIFT_VERSION: 5.0
-      INFOPLIST_FILE: ExampleApp/Info.plist
+      INFOPLIST_FILE: ExampleApp/Supporting Files/Info.plist
     sources:
       - ExampleApp
   ExampleAppTests:
     type: bundle.unit-test
     platform: iOS
     sources:
+      - ExampleApp
       - ExampleAppTests
