--- a/project.yml
+++ b/project.yml
@@ -2,29 +2,45 @@ name: ExampleApp
 
 settings:
   base:
+    PRODUCT_NAME: ExampleApp
     MARKETING_VERSION: 1.0.0
     CURRENT_PROJECT_VERSION: 1
-    PRODUCT_NAME: ExampleApp
+    SWIFT_VERSION: 5.0
+  configs:
+    Debug:
+      IPHONEOS_DEPLOYMENT_TARGET: 15.0
+    Release:
+      IPHONEOS_DEPLOYMENT_TARGET: 15.0
 
 options:
   developmentLanguage: ja
   bundleIdPrefix: org.app.example.u7chan
-  deploymentTarget:
-    iOS: '15.0'
 
 targets:
   ExampleApp:
     type: application
     platform: iOS
     settings:
-      SWIFT_VERSION: 5.0
       INFOPLIST_FILE: ExampleApp/Supporting Files/Info.plist
     sources:
       - ExampleApp
   ExampleAppTests:
     type: bundle.unit-test
     platform: iOS
+    settings:
+      PRODUCT_NAME: ExampleAppTests
+      INFOPLIST_FILE: ExampleAppTests/Supporting Files/Info.plist
     sources:
       - ExampleAppTests
     dependencies:
       - target: ExampleApp
+schemes:
+  ExampleAppDebug:
+    build:
+      targets:
+        ExampleApp: all
+        ExampleAppTests: [test]
+    test:
+      config: Debug
+      targets:
+        - ExampleAppTests
